--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>Clickable Tiles for Audio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <h1 style="font-size: 50px;">ହାତୀ ଓ ଚଢେଇ</h1>
-    
+<body style="background-color: yellow;">
+    <!-- Replace the h1 element with an img element -->
+    <img src="heading.png" alt="Title Image" style="width: 100%; max-width: 400px; margin: 0 auto; display: block;">
+
     <div class="audio-tiles" id="tiles-container">
         <!-- Tile 1 -->
         <div class="audio-tile" onclick="playAudio('audio1', 'image1.jpg')"> 
