--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="tile" onclick="goToIndex(1)">ଖେଳ</div>
         <div class="tile" onclick="goToIndex(2)">ବହି</div>
         <div class="tile" onclick="goToIndex(3)">ଅ, ଆ</div>
-        <div class="tile" onclick="goToIndex(4)">Tile 4</div>
+        <div class="tile" onclick="goToIndex(4)">ଲିଖନ ଅଭ୍ଯାସ</div>
         <div class="tile" onclick="goToIndex(5)">Tile 5</div>
         <div class="tile" onclick="goToIndex(6)">Tile 6</div>
         <div class="tile" onclick="goToIndex(7)">Tile 7</div>
